--- a/overlay/etc/pacman.conf
+++ b/overlay/etc/pacman.conf
@@ -22,7 +22,7 @@ SyncFirst   = pacman
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   =
+IgnorePkg   = gnome gtk gtk3 gsettings-desktop-schemas libgnome-keyring brasero cheese ekiga libgweather evolution-data-server empathy eog evince libunique libunique3 evolution evolution-exchange file-roller gconf-editor gdm gtksourceview2 gtksourceview3 gedit gnome-disk-utility gnome-games gnome-games-extra-data gnome-menus gnome-nettool gnome-power-manager libwnck3 libwnck gtkmm3 gtkmm gnome-system-monitor gnome-system-tools gnome-utils libgnome-data libgnome libgnomekdb mousetweaks nautilus-sendto libgnome-media-profiles rhythmbox seahorse vinagre vino zenity
 #IgnoreGroup =
 
 #NoUpgrade   =
