Created a Makefile. Trying to get autologin to work.

--- a/root-image/etc/rc.conf
+++ b/root-image/etc/rc.conf
@@ -28,6 +28,6 @@ USEDMRAID="no"
 USEBTRFS="no"
 USELVM="no"
 
-HOSTNAME="induction"
+HOSTNAME="BSL"
 
-DAEMONS=(hwclock syslog-ng dbus crond @zramswap @openntpd @lighttpd @lightdm @wicd)
+DAEMONS=(syslog-ng dbus crond @lightdm @networkmanager)
