--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -1,12 +1,12 @@
 DEFAULT menu.c32
 PROMPT 0
-MENU TITLE Induction Linux
-TIMEOUT 300
+MENU TITLE Book Scanning Linux
+TIMEOUT 0
 
-LABEL induction
-MENU LABEL Induction Linux
+LABEL bookscanninglinux
+MENU LABEL Book Scanning Linux
 LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz
 INITRD /%INSTALL_DIR%/boot/%ARCH%/archiso.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
 
-ONTIMEOUT induction
+ONTIMEOUT bookscanninglinux
