* Added boot-to-desktop without login.  * Fixed pdfbeads.  * Installed Plymouth.

--- a/mkinitcpio.conf
+++ b/mkinitcpio.conf
@@ -1,2 +1,3 @@
-HOOKS="base udev memdisk archiso archiso_pxe_nbd archiso_loop_mnt pata scsi sata usb fw pcmcia filesystems usbinput"
+HOOKS="base udev memdisk archiso archiso_pxe_nbd archiso_loop_mnt pata scsi sata usb plymouth fw pcmcia filesystems usbinput"
 COMPRESSION="xz"
+MODULES="i915 radeon nouveau"
