--- a/syslinux/syslinux.cfg
+++ b/syslinux/syslinux.cfg
@@ -1,11 +1,11 @@
 DEFAULT menu.c32
-PROMPT 0
+PROMPT 1
 MENU TITLE Book Scanning Linux
-TIMEOUT 0
+TIMEOUT 1
 
 LABEL bookscanninglinux
 MENU LABEL Book Scanning Linux
-LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz
+LINUX /%INSTALL_DIR%/boot/%ARCH%/vmlinuz ro quiet splash
 INITRD /%INSTALL_DIR%/boot/%ARCH%/archiso.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
 
