--- a/root-image/etc/rc.conf
+++ b/root-image/etc/rc.conf
@@ -30,4 +30,4 @@ USELVM="no"
 
 HOSTNAME="BSL"
 
-DAEMONS=(syslog-ng dbus crond @lightdm @networkmanager)
+DAEMONS=(syslog-ng dbus crond @networkmanager)
